Fix font issue of harakat overlapping and some letters showing incorrectly

--- a/src/components/Verse/Verse.css
+++ b/src/components/Verse/Verse.css
@@ -56,6 +56,7 @@
 
 .verse {
     font-family: 'uthmanic';
+    letter-spacing: 0px !important; 
   }
 
   @media (max-width: 1024px) {
